# p_pricing_waterfall_agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: deploy-frontend.yml
dbt/: dbt_project.yml  profiles.yml
dbt/models/bronze/: sources.yml  src_raw_transactions.sql
dbt/models/gold/: customer_profitability.sql  schema.yml  waterfall_alerts.sql  waterfall_fact.sql
dbt/models/silver/: stg_clean_transactions.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AgentChat.jsx  CustomerTable.jsx  FilterBar.jsx  WaterfallChart.jsx
scripts/: chat.py  find_account_id.py  load_to_snowflake.py  run_agent.py  run_ddl.py  seed_sample_data.py  setup_snowflake.sql
src/agent/: intent_parser.py  orchestrator.py  response_formatter.py  sql_agent.py
src/analytics/: narratives.py  outliers.py  trends.py  waterfall.py
src/api/: main.py  models.py  routes.py
src/snowflake/: connection.py  queries.py
tests/: test_api.py  test_intent_parser.py  test_narratives.py  test_orchestrator.py  test_outliers.py  test_response_formatter.py  test_trends.py  test_waterfall.py
tests/fixtures/: sample_transactions.csv
